<resources>
    <string name="app_name">Ngeruntah</string>
    <string name="deskripsi_jenis">Sampah merupakan hasil produksi manusia yang tidak akan pernah lepas menjadi permasalahan dalam kehidupan sehari-hari. Lalu, jenis-jenis sampah apa saja yang biasanya kita hasilkan? Yuk, kenali di sini.\n\nSampah jika dibiarkan saja akan mengganggu kebersihan lingkungan secara umum. Sampah dapat dibedakan menjadi dua macam, yaitu:</string>
    <string name="anorganik"><b>1. Sampah Padat (Anorganik)</b>\n\nSampah anorganik adalah sampah yang terdiri atas bahan-bahan anorganik. Contoh bahan-bahan anorganik adalah bahan logam, plastik, kaca, karet, dan kaleng. Sifat sampah anorganik adalah tahan lama dan sukar membusuk.\n\nSampah ini tidak mudah diuraikan oleh mikroorganisme tanah. Apabila dibuang sembarangan, sampah anorganik dapat menimbulkan pencemaran tanah.</string>
    <string name="organik"><b>2. Sampah Basah (Organik)</b>\n\nSampah organik adalah sampah yang terdiri atas bahan-bahan organik. Sifat sampah organik adalah tidak tahan lama dan cepat membusuk. Biasanya sampah jenis ini berasal dari makhluk hidup. Contohnya adalah sayur-sayuran, buah-buah yang membusuk, sisa nasi, daun, dan sebagainya.\n\nSampah organik mudah diuraikan mikroorganisme tanah. Hanya saja jenis sampah akan menimbulkan bau kurang sedap jika tidak dikelola dengan baik.</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="kembali">Kembali</string>
    <string name="jemput_sekarang">Jemput Sekarang</string>
    <string-array name="kategori_sampah">
        <item>Plastik</item>
        <item>Logam</item>
        <item>Kertas</item>
        <item>Karet</item>
    </string-array>
    <string-array name="harga_perkilo">
        <item>1500</item>
        <item>3000</item>
        <item>800</item>
        <item>1000</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="jemput_sampah">Jemput Sampah</string>
    <string name="todo">TODO</string>
    <string name="berat_kg">Berat (Kg)</string>
    <string name="kategori_sampah">Kategori Sampah</string>
    <string name="_5_kg">5 Kg</string>
    <string name="mohon_isi_data_dibawah_ini_dengan_benar">Mohon isi data dibawah ini dengan benar</string>
    <string name="catatan_tambahan_opsional">Catatan Tambahan (Opsional)</string>
    <string name="masukan_catatan_tambahan_anda">Masukan catatan tambahan anda</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="masukan_nama_lengkap">Masukan nama lengkap</string>
    <string name="tanggal_penjemputan">Tanggal Penjemputan</string>
    <string name="masukan_tanggal">Masukan tanggal</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_jenis_sampah">Jenis-jenis Sampah</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="john_doe">John Doe</string>
    <string name="lokasi_anda">Lokasi Anda</string>
    <string name="aplikasi_bank_sampah_adalah_solusi_untuk_menyelesaikan_masalah_sosial_tentang_kebersihan_lingkungan">Aplikasi Bank Sampah adalah solusi untuk menyelesaikan masalah sosial tentang kebersihan lingkungan.</string>
    <string name="tukarkan_sampah_plastikmu_sekarang">Tukarkan sampah plastikmu sekarang!</string>
    <string name="menu_kategori">Menu Kategori</string>

</resources>