<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIcon="@drawable/ic_back">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:text="@string/jemput_sampah"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@color/colorPrimary"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/ic_info"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/mohon_isi_data_dibawah_ini_dengan_benar"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvKategori"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/kategori_sampah"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/spKategori"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_below="@+id/tvKategori"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/spinner_background"
                                android:entries="@array/kategori_sampah"
                                android:spinnerMode="dropdown" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tvKategori"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center"
                                android:layout_marginTop="20dp"
                                android:src="@drawable/ic_spinner"
                                android:contentDescription="TODO" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/berat_kg"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputBerat"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:backgroundTint="@color/colorPrimary"
                                android:hint="@string/_5_kg"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:maxLines="1"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tanggal_penjemputan"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputTanggal"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:backgroundTint="@color/colorPrimary"
                                android:focusableInTouchMode="false"
                                android:hint="@string/masukan_tanggal"
                                android:imeOptions="actionNext"
                                android:inputType="date"
                                android:maxLines="1"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alamat"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputAlamat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary"
                            android:hint="Masukan alamat"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:minHeight="50dp"
                            android:scrollbars="vertical"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/catatan_tambahan_opsional"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputCatatan"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:backgroundTint="@color/colorPrimary"
                            android:hint="@string/masukan_catatan_tambahan_anda"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCheckout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/jemput_sekarang"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:theme="@style/Theme.MaterialComponents"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="10dp"
                app:elevation="5dp"
                app:rippleColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>