<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:elevation="9dp"
                android:src="@drawable/signin_boy"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="3dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="63dp"
                android:elevation="0dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:id="@+id/linearLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">



                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linearLayout1"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">


                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawablePadding="16dp"
                                android:hint="@string/username"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:autofillHints="username"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawablePadding="16dp"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:autofillHints="emailAddress"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawablePadding="16dp"
                                android:hint="@string/nomor_telepon"
                                android:inputType="text|number"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:autofillHints="phone"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawablePadding="16dp"
                                android:hint="@string/jenis_kelamin"
                                android:inputType="text"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:autofillHints="sex"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnCheckout"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_margin="30dp"
                            android:text="@string/edit_profile"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:theme="@style/Theme.MaterialComponents"
                            app:backgroundTint="@color/colorPrimary"
                            app:cornerRadius="10dp"
                            app:elevation="5dp"
                            app:rippleColor="@color/colorPrimaryDark" />
                        <!--                        <TextView-->
                        <!--                            android:id="@+id/forgot_password"-->
                        <!--                            android:layout_width="match_parent"-->
                        <!--                            android:layout_height="wrap_content"-->
                        <!--                            android:layout_marginBottom="32dp"-->
                        <!--                            android:gravity="center_horizontal"-->
                        <!--                            android:text="Ngeruntah By Sc1"-->
                        <!--                            android:textAlignment="center"-->
                        <!--                            android:textColor="#4f4f4f"-->
                        <!--                            android:textSize="16sp"-->
                        <!--                            android:textStyle="bold" />-->
                    </LinearLayout>

                </RelativeLayout>


            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>